--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -60,7 +60,7 @@ jobs:
             --restart unless-stopped \
             --env-file "${ENV_FILE}" \
             -v "${LOG_DIR}":/app/logs \
-            ${{ secrets.DOCKERHUB_USERNAME }}/femrouter:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler:latest
 
       - name: Check container status
         run: |
