--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,9 +26,9 @@ jobs:
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login docker.io -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Pull latest image
+      - name: Pull branch image
         run: |
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler:latest
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler:${{ github.ref_name }}
 
       - name: Create/Update .env file
         run: |
@@ -60,7 +60,7 @@ jobs:
             --restart unless-stopped \
             --env-file "${ENV_FILE}" \
             -v "${LOG_DIR}":/app/logs \
-            ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler:${{ github.ref_name }}
 
       - name: Check container status
         run: |
