--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,12 +2,12 @@ name: Deploy Discord Bot (Docker)
 
 on:
   push:
-    branches: [pioneer]
+    branches: [main]
   workflow_run:
     workflows: ["CI - Build and Push Docker Image"]
     types:
       - completed
-    branches: [pioneer]
+    branches: [main]
 
 jobs:
   deploy:
