--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,20 +2,19 @@ name: Deploy Discord Bot (Docker)
 
 on:
   push:
-    branches: [112dev]
+    branches: [pioneer]
   workflow_run:
     workflows: ["CI - Build and Push Docker Image"]
     types:
       - completed
-    branches: [112dev]
+    branches: [pioneer]
 
 jobs:
   deploy:
     runs-on: self-hosted
     # Only run if CI workflow succeeded or if manually pushed
     if: ${{ github.event_name == 'push' || github.event.workflow_run.conclusion == 'success' }}
-    environment: secrets
-
+    environment: pioneer-deployment
     env:
       CONTAINER_NAME: ${{ format('femrouter-bot-{0}', github.ref_name) }}
       DEPLOY_DIR: ${{ format('/opt/femrouter/{0}', github.ref_name) }}
@@ -24,26 +23,18 @@ jobs:
     
     steps:
       - name: Log in to Docker Hub
-        env:
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
-          echo "${DOCKERHUB_TOKEN}" | docker login docker.io -u "${DOCKERHUB_USERNAME}" --password-stdin
+          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login docker.io -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Pull latest image
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      - name: Pull branch image
         run: |
-          docker pull "${DOCKERHUB_USERNAME}/femrouter:latest"
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler:${{ github.ref_name }}
 
       - name: Create/Update .env file
-        env:
-          DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
-          DEV_GUILD_ID: ${{ secrets.DEV_GUILD_ID }}
         run: |
           mkdir -p "${DEPLOY_DIR}"
-          echo "DISCORD_TOKEN=${DISCORD_TOKEN}" > "${ENV_FILE}"
-          echo "DEV_GUILD_ID=${DEV_GUILD_ID}" >> "${ENV_FILE}"
+          echo "DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}" > "${ENV_FILE}"
+          echo "DEV_GUILD_ID=${{ secrets.DEV_GUILD_ID }}" >> "${ENV_FILE}"
           echo "PREFIX=!" >> "${ENV_FILE}"
           echo "LOG_LEVEL=INFO" >> "${ENV_FILE}"
       
@@ -62,8 +53,6 @@ jobs:
           docker rm "${CONTAINER_NAME}" || true
 
       - name: Run new container
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
           mkdir -p "${LOG_DIR}"
           docker run -d \
@@ -71,7 +60,7 @@ jobs:
             --restart unless-stopped \
             --env-file "${ENV_FILE}" \
             -v "${LOG_DIR}":/app/logs \
-            "${DOCKERHUB_USERNAME}/femrouter:latest"
+            ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler:${{ github.ref_name }}
 
       - name: Check container status
         run: |
