--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,14 @@ name: CI - Build and Push Docker Image
 on:
   push:
     branches:
-      - 112dev
+      - pioneer
   pull_request:
     branches:
-      - 112dev
+      - pioneer
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/femrouter
+  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler
 
 jobs:
   build-and-push:
