add rabbitmq and worker

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,17 @@ DATABASE_URL=sqlite:///data/bot.db
 # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 
+# MongoDB Configuration
+MONGODB_URI=example_mongodb_uri
+MONGO_INITDB_ROOT_USERNAME=example_mongodb_username
+MONGO_INITDB_ROOT_PASSWORD=example_mongodb_password
+MONGODB_DB=femrouter
+MONGODB_ROUTER_COLLECTION=routers
+MONGODB_TASK_COLLECTION=tasks
+
+# RabbitMQ Configuration (optional)
+RABBITMQ_URI=amqp://guest:guest@femrouter-rabbitmq:5672/
+RABBITMQ_QUEUE=router_events
+RABBITMQ_TASK_QUEUE=router_tasks
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
