--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,14 +17,18 @@ jobs:
     environment: secrets
 
     env:
-      CONTAINER_NAME: ${{ format('femrouter-bot-{0}', github.ref_name) }}
+      BOT_CONTAINER_NAME: ${{ format('femrouter-bot-{0}', github.ref_name) }}
+      WORKER_CONTAINER_NAME: ${{ format('femrouter-worker-{0}', github.ref_name) }}
+      RABBIT_CONTAINER_NAME: ${{ format('femrouter-rabbitmq-{0}', github.ref_name) }}
       DEPLOY_DIR: ${{ format('/opt/femrouter/{0}', github.ref_name) }}
       ENV_FILE: ${{ format('/opt/femrouter/{0}/.env', github.ref_name) }}
       LOG_DIR: ${{ format('/opt/femrouter/{0}/logs', github.ref_name) }}
       NETWORK_NAME: ${{ format('femrouter-net-{0}', github.ref_name) }}
       MONGO_CONTAINER_NAME: ${{ format('femrouter-mongodb-{0}', github.ref_name) }}
       MONGO_DATA_DIR: ${{ format('/opt/femrouter/{0}/mongo-data', github.ref_name) }}
-      IMAGE_REPOSITORY: ${{ format('{0}/femrouter', secrets.DOCKERHUB_USERNAME) }}
+      RABBIT_DATA_DIR: ${{ format('/opt/femrouter/{0}/rabbitmq-data', github.ref_name) }}
+      IMAGE_REPOSITORY_BOT: ${{ format('{0}/femrouter-bot', secrets.DOCKERHUB_USERNAME) }}
+      IMAGE_REPOSITORY_WORKER: ${{ format('{0}/femrouter-worker', secrets.DOCKERHUB_USERNAME) }}
       IMAGE_TAG: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_branch || github.ref_name }}
     
     steps:
@@ -37,17 +41,26 @@ jobs:
 
       - name: Pull latest bot image
         run: |
-          docker pull "${IMAGE_REPOSITORY}:${IMAGE_TAG}"
+          docker pull "${IMAGE_REPOSITORY_BOT}:${IMAGE_TAG}"
+
+      - name: Pull latest worker image
+        run: |
+          docker pull "${IMAGE_REPOSITORY_WORKER}:${IMAGE_TAG}"
 
       - name: Pull MongoDB image
         run: |
           docker pull mongo:7.0
+
+      - name: Pull RabbitMQ image
+        run: |
+          docker pull rabbitmq:3.13-management
 
       - name: Prepare deployment directories
         run: |
           mkdir -p "${DEPLOY_DIR}"
           mkdir -p "${LOG_DIR}"
           mkdir -p "${MONGO_DATA_DIR}"
+          mkdir -p "${RABBIT_DATA_DIR}"
 
       - name: Create/Update .env file
         env:
@@ -55,6 +68,8 @@ jobs:
           DEV_GUILD_ID: ${{ secrets.DEV_GUILD_ID }}
           MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
           MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
+          RABBITMQ_DEFAULT_USER: ${{ secrets.RABBITMQ_DEFAULT_USER }}
+          RABBITMQ_DEFAULT_PASS: ${{ secrets.RABBITMQ_DEFAULT_PASS }}
         run: |
           echo "DISCORD_TOKEN=${DISCORD_TOKEN}" > "${ENV_FILE}"
           echo "DEV_GUILD_ID=${DEV_GUILD_ID}" >> "${ENV_FILE}"
@@ -63,6 +78,14 @@ jobs:
           echo "MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}" >> "${ENV_FILE}"
           echo "MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}" >> "${ENV_FILE}"
           echo "MONGODB_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_CONTAINER_NAME}:27017/femrouter?authSource=admin" >> "${ENV_FILE}"
+          echo "MONGODB_DB=femrouter" >> "${ENV_FILE}"
+          echo "MONGODB_ROUTER_COLLECTION=routers" >> "${ENV_FILE}"
+          echo "MONGODB_TASK_COLLECTION=tasks" >> "${ENV_FILE}"
+          echo "RABBITMQ_URI=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@${RABBIT_CONTAINER_NAME}:5672/" >> "${ENV_FILE}"
+          echo "RABBITMQ_QUEUE=router_events" >> "${ENV_FILE}"
+          echo "RABBITMQ_TASK_QUEUE=router_tasks" >> "${ENV_FILE}"
+          echo "RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}" >> "${ENV_FILE}"
+          echo "RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}" >> "${ENV_FILE}"
       
       - name: Verify .env file was created
         run: |
@@ -77,8 +100,12 @@ jobs:
         run: |
           docker stop "${MONGO_CONTAINER_NAME}" || true
           docker rm "${MONGO_CONTAINER_NAME}" || true
-          docker stop "${CONTAINER_NAME}" || true
-          docker rm "${CONTAINER_NAME}" || true
+          docker stop "${RABBIT_CONTAINER_NAME}" || true
+          docker rm "${RABBIT_CONTAINER_NAME}" || true
+          docker stop "${WORKER_CONTAINER_NAME}" || true
+          docker rm "${WORKER_CONTAINER_NAME}" || true
+          docker stop "${BOT_CONTAINER_NAME}" || true
+          docker rm "${BOT_CONTAINER_NAME}" || true
 
       - name: Ensure deployment network exists
         run: |
@@ -98,22 +125,51 @@ jobs:
             -v "${MONGO_DATA_DIR}":/data/db \
             mongo:7.0
 
+      - name: Run RabbitMQ container
+        env:
+          RABBITMQ_DEFAULT_USER: ${{ secrets.RABBITMQ_DEFAULT_USER }}
+          RABBITMQ_DEFAULT_PASS: ${{ secrets.RABBITMQ_DEFAULT_PASS }}
+        run: |
+          docker run -d \
+            --name "${RABBIT_CONTAINER_NAME}" \
+            --restart unless-stopped \
+            --network "${NETWORK_NAME}" \
+            -e RABBITMQ_DEFAULT_USER="${RABBITMQ_DEFAULT_USER}" \
+            -e RABBITMQ_DEFAULT_PASS="${RABBITMQ_DEFAULT_PASS}" \
+            -v "${RABBIT_DATA_DIR}":/var/lib/rabbitmq \
+            -p 0:5672 \
+            -p 0:15672 \
+            rabbitmq:3.13-management
+
       - name: Run new container
         run: |
           docker run -d \
-            --name "${CONTAINER_NAME}" \
+            --name "${BOT_CONTAINER_NAME}" \
             --restart unless-stopped \
             --env-file "${ENV_FILE}" \
             -v "${LOG_DIR}":/app/logs \
             --network "${NETWORK_NAME}" \
-            "${IMAGE_REPOSITORY}:${IMAGE_TAG}"
+            "${IMAGE_REPOSITORY_BOT}:${IMAGE_TAG}"
+
+      - name: Run worker container
+        run: |
+          docker run -d \
+            --name "${WORKER_CONTAINER_NAME}" \
+            --restart unless-stopped \
+            --env-file "${ENV_FILE}" \
+            -v "${LOG_DIR}":/app/logs \
+            --network "${NETWORK_NAME}" \
+            "${IMAGE_REPOSITORY_WORKER}:${IMAGE_TAG}" \
+            python workers/router_event_worker.py
 
       - name: Check container status
         run: |
           sleep 5
-          docker ps -a | grep "${CONTAINER_NAME}"
+          docker ps -a | grep "${BOT_CONTAINER_NAME}"
+          docker ps -a | grep "${WORKER_CONTAINER_NAME}"
           echo "--- Container Logs ---"
-          docker logs "${CONTAINER_NAME}" --tail 50
+          docker logs "${BOT_CONTAINER_NAME}" --tail 50 || true
+          docker logs "${WORKER_CONTAINER_NAME}" --tail 50 || true
 
       - name: Clean up old images
         run: |
