--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build-and-push:
-    runs-on: hosted-runner
+    runs-on: self-hosted
     permissions:
       contents: read
       packages: write
