--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,29 +14,101 @@ jobs:
     runs-on: self-hosted
     # Only run if CI workflow succeeded or if manually pushed
     if: ${{ github.event_name == 'push' || github.event.workflow_run.conclusion == 'success' }}
-    environment: pioneer-deployment
+    environment: secrets
+
     env:
-      CONTAINER_NAME: ${{ format('femrouter-bot-{0}', github.ref_name) }}
+      BOT_CONTAINER_NAME: ${{ format('femrouter-bot-{0}', github.ref_name) }}
+      WORKER_CONTAINER_NAME: ${{ format('femrouter-worker-{0}', github.ref_name) }}
+      RABBIT_CONTAINER_NAME: ${{ format('femrouter-rabbitmq-{0}', github.ref_name) }}
       DEPLOY_DIR: ${{ format('/opt/femrouter/{0}', github.ref_name) }}
       ENV_FILE: ${{ format('/opt/femrouter/{0}/.env', github.ref_name) }}
       LOG_DIR: ${{ format('/opt/femrouter/{0}/logs', github.ref_name) }}
+      NETWORK_NAME: ${{ format('femrouter-net-{0}', github.ref_name) }}
+      MONGO_CONTAINER_NAME: ${{ format('femrouter-mongodb-{0}', github.ref_name) }}
+      MONGO_DATA_DIR: ${{ format('/opt/femrouter/{0}/mongo-data', github.ref_name) }}
+      RABBIT_VOLUME_NAME: ${{ format('femrouter-rabbitmq-data-{0}', github.ref_name) }}
+      IMAGE_REPOSITORY_BOT: ${{ format('{0}/femrouter-bot', secrets.DOCKERHUB_USERNAME) }}
+      IMAGE_REPOSITORY_WORKER: ${{ format('{0}/femrouter-worker', secrets.DOCKERHUB_USERNAME) }}
+      IMAGE_TAG: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_branch || github.ref_name }}
     
     steps:
       - name: Log in to Docker Hub
+        env:
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login docker.io -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+          echo "${DOCKERHUB_TOKEN}" | docker login docker.io -u "${DOCKERHUB_USERNAME}" --password-stdin
 
-      - name: Pull branch image
+      - name: Pull latest bot image
         run: |
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler:${{ github.ref_name }}
+          docker pull "${IMAGE_REPOSITORY_BOT}:${IMAGE_TAG}"
 
-      - name: Create/Update .env file
+      - name: Pull latest worker image
+        run: |
+          docker pull "${IMAGE_REPOSITORY_WORKER}:${IMAGE_TAG}"
+
+      - name: Pull MongoDB image
+        run: |
+          docker pull mongo:7.0
+
+      - name: Pull RabbitMQ image
+        run: |
+          docker pull rabbitmq:3.13-management
+
+      - name: Prepare deployment directories
         run: |
           mkdir -p "${DEPLOY_DIR}"
-          echo "DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}" > "${ENV_FILE}"
-          echo "DEV_GUILD_ID=${{ secrets.DEV_GUILD_ID }}" >> "${ENV_FILE}"
-          echo "PREFIX=!" >> "${ENV_FILE}"
-          echo "LOG_LEVEL=INFO" >> "${ENV_FILE}"
+          mkdir -p "${LOG_DIR}"
+          mkdir -p "${MONGO_DATA_DIR}"
+
+      - name: Ensure RabbitMQ volume exists
+        run: |
+          docker volume inspect "${RABBIT_VOLUME_NAME}" >/dev/null 2>&1 || docker volume create "${RABBIT_VOLUME_NAME}"
+
+      - name: Create/Update .env file
+        env:
+          DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
+          DEV_GUILD_ID: ${{ secrets.DEV_GUILD_ID }}
+          MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+          MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
+          RABBITMQ_DEFAULT_USER: ${{ secrets.RABBITMQ_DEFAULT_USER }}
+          RABBITMQ_DEFAULT_PASS: ${{ secrets.RABBITMQ_DEFAULT_PASS }}
+        run: |
+          python3 - <<'PY'
+          import os
+          from urllib.parse import quote
+
+          env_path = os.environ["ENV_FILE"]
+          user = os.environ.get("RABBITMQ_DEFAULT_USER", "")
+          password = os.environ.get("RABBITMQ_DEFAULT_PASS", "")
+          host = os.environ.get("RABBIT_CONTAINER_NAME", "rabbitmq")
+
+          lines = [
+            ("DISCORD_TOKEN", os.environ.get("DISCORD_TOKEN", "")),
+            ("DEV_GUILD_ID", os.environ.get("DEV_GUILD_ID", "")),
+            ("PREFIX", "!"),
+            ("LOG_LEVEL", "INFO"),
+            ("MONGO_INITDB_ROOT_USERNAME", os.environ.get("MONGO_INITDB_ROOT_USERNAME", "")),
+            ("MONGO_INITDB_ROOT_PASSWORD", os.environ.get("MONGO_INITDB_ROOT_PASSWORD", "")),
+            (
+              "MONGODB_URI",
+              f"mongodb://{os.environ.get('MONGO_INITDB_ROOT_USERNAME','')}:{os.environ.get('MONGO_INITDB_ROOT_PASSWORD','')}@"
+              f"{os.environ.get('MONGO_CONTAINER_NAME','mongodb')}:27017/femrouter?authSource=admin",
+            ),
+            ("MONGODB_DB", "femrouter"),
+            ("MONGODB_ROUTER_COLLECTION", "routers"),
+            ("MONGODB_TASK_COLLECTION", "tasks"),
+            ("RABBITMQ_QUEUE", "router_events"),
+            ("RABBITMQ_TASK_QUEUE", "router_tasks"),
+            ("RABBITMQ_DEFAULT_USER", user),
+            ("RABBITMQ_DEFAULT_PASS", password),
+            ("RABBITMQ_URI", f"amqp://{quote(user)}:{quote(password)}@{host}:5672/"),
+          ]
+
+          with open(env_path, "w", encoding="utf-8") as env_file:
+            for key, value in lines:
+              env_file.write(f"{key}={value}\n")
+          PY
       
       - name: Verify .env file was created
         run: |
@@ -47,27 +119,102 @@ jobs:
           echo "File size: ${FILE_BYTES} bytes"
           echo "Lines in file: ${FILE_LINES}"
 
-      - name: Stop and remove old container
+      - name: Stop and remove old containers
         run: |
-          docker stop "${CONTAINER_NAME}" || true
-          docker rm "${CONTAINER_NAME}" || true
+          docker stop "${MONGO_CONTAINER_NAME}" || true
+          docker rm "${MONGO_CONTAINER_NAME}" || true
+          docker stop "${RABBIT_CONTAINER_NAME}" || true
+          docker rm "${RABBIT_CONTAINER_NAME}" || true
+          docker stop "${WORKER_CONTAINER_NAME}" || true
+          docker rm "${WORKER_CONTAINER_NAME}" || true
+          docker stop "${BOT_CONTAINER_NAME}" || true
+          docker rm "${BOT_CONTAINER_NAME}" || true
+
+      - name: Ensure deployment network exists
+        run: |
+          docker network inspect "${NETWORK_NAME}" >/dev/null 2>&1 || docker network create "${NETWORK_NAME}"
+
+      - name: Run MongoDB container
+        env:
+          MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+          MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
+        run: |
+          docker run -d \
+            --name "${MONGO_CONTAINER_NAME}" \
+            --restart unless-stopped \
+            --network "${NETWORK_NAME}" \
+            -e MONGO_INITDB_ROOT_USERNAME="${MONGO_INITDB_ROOT_USERNAME}" \
+            -e MONGO_INITDB_ROOT_PASSWORD="${MONGO_INITDB_ROOT_PASSWORD}" \
+            -v "${MONGO_DATA_DIR}":/data/db \
+            mongo:7.0
+
+      - name: Run RabbitMQ container
+        env:
+          RABBITMQ_DEFAULT_USER: ${{ secrets.RABBITMQ_DEFAULT_USER }}
+          RABBITMQ_DEFAULT_PASS: ${{ secrets.RABBITMQ_DEFAULT_PASS }}
+        run: |
+          docker run -d \
+            --name "${RABBIT_CONTAINER_NAME}" \
+            --restart unless-stopped \
+            --network "${NETWORK_NAME}" \
+            -e RABBITMQ_DEFAULT_USER="${RABBITMQ_DEFAULT_USER}" \
+            -e RABBITMQ_DEFAULT_PASS="${RABBITMQ_DEFAULT_PASS}" \
+            -v "${RABBIT_VOLUME_NAME}":/var/lib/rabbitmq \
+            -p 0:5672 \
+            -p 0:15672 \
+            rabbitmq:3.13-management
+
+      - name: Wait for RabbitMQ readiness
+        run: |
+          ready=0
+          for attempt in $(seq 1 12); do
+            if docker ps --filter "name=${RABBIT_CONTAINER_NAME}" --filter "status=running" --quiet | grep -q .; then
+              if docker exec "${RABBIT_CONTAINER_NAME}" rabbitmq-diagnostics ping >/dev/null 2>&1; then
+                ready=1
+                echo "RabbitMQ reported ready on attempt ${attempt}"
+                break
+              fi
+            fi
+            echo "RabbitMQ not ready yet (attempt ${attempt}/12); retrying in 5s"
+            sleep 5
+          done
+          if [ "$ready" -ne 1 ]; then
+            echo "RabbitMQ failed to become ready" >&2
+            docker logs "${RABBIT_CONTAINER_NAME}" >&2 || true
+            exit 1
+          fi
+          echo "RabbitMQ is ready; giving it 10 seconds to settle before starting dependents"
+          sleep 10
 
       - name: Run new container
         run: |
-          mkdir -p "${LOG_DIR}"
           docker run -d \
-            --name "${CONTAINER_NAME}" \
+            --name "${BOT_CONTAINER_NAME}" \
             --restart unless-stopped \
             --env-file "${ENV_FILE}" \
             -v "${LOG_DIR}":/app/logs \
-            ${{ secrets.DOCKERHUB_USERNAME }}/femrouter-rizzler:${{ github.ref_name }}
+            --network "${NETWORK_NAME}" \
+            "${IMAGE_REPOSITORY_BOT}:${IMAGE_TAG}"
+
+      - name: Run worker container
+        run: |
+          docker run -d \
+            --name "${WORKER_CONTAINER_NAME}" \
+            --restart unless-stopped \
+            --env-file "${ENV_FILE}" \
+            -v "${LOG_DIR}":/app/logs \
+            --network "${NETWORK_NAME}" \
+            "${IMAGE_REPOSITORY_WORKER}:${IMAGE_TAG}" \
+            python workers/router_event_worker.py
 
       - name: Check container status
         run: |
           sleep 5
-          docker ps -a | grep "${CONTAINER_NAME}"
+          docker ps -a | grep "${BOT_CONTAINER_NAME}"
+          docker ps -a | grep "${WORKER_CONTAINER_NAME}"
           echo "--- Container Logs ---"
-          docker logs "${CONTAINER_NAME}" --tail 50
+          docker logs "${BOT_CONTAINER_NAME}" --tail 50 || true
+          docker logs "${WORKER_CONTAINER_NAME}" --tail 50 || true
 
       - name: Clean up old images
         run: |
