--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,7 @@ jobs:
     env:
       BOT_CONTAINER_NAME: ${{ format('femrouter-bot-{0}', github.ref_name) }}
       WORKER_CONTAINER_NAME: ${{ format('femrouter-worker-{0}', github.ref_name) }}
+      MONITOR_CONTAINER_NAME: ${{ format('femrouter-monitor-{0}', github.ref_name) }}
       RABBIT_CONTAINER_NAME: ${{ format('femrouter-rabbitmq-{0}', github.ref_name) }}
       DEPLOY_DIR: ${{ format('/opt/femrouter/{0}', github.ref_name) }}
       ENV_FILE: ${{ format('/opt/femrouter/{0}/.env', github.ref_name) }}
@@ -29,6 +30,7 @@ jobs:
       RABBIT_VOLUME_NAME: ${{ format('femrouter-rabbitmq-data-{0}', github.ref_name) }}
       IMAGE_REPOSITORY_BOT: ${{ format('{0}/femrouter-bot', secrets.DOCKERHUB_USERNAME) }}
       IMAGE_REPOSITORY_WORKER: ${{ format('{0}/femrouter-worker', secrets.DOCKERHUB_USERNAME) }}
+      IMAGE_REPOSITORY_MONITOR: ${{ format('{0}/femrouter-monitor', secrets.DOCKERHUB_USERNAME) }}
       IMAGE_TAG: latest
     
     steps:
@@ -46,6 +48,10 @@ jobs:
       - name: Pull latest worker image
         run: |
           docker pull "${IMAGE_REPOSITORY_WORKER}:${IMAGE_TAG}"
+
+      - name: Pull latest monitor image
+        run: |
+          docker pull "${IMAGE_REPOSITORY_MONITOR}:${IMAGE_TAG}"
 
       - name: Pull MongoDB image
         run: |
@@ -127,6 +133,8 @@ jobs:
           docker rm "${RABBIT_CONTAINER_NAME}" || true
           docker stop "${WORKER_CONTAINER_NAME}" || true
           docker rm "${WORKER_CONTAINER_NAME}" || true
+          docker stop "${MONITOR_CONTAINER_NAME}" || true
+          docker rm "${MONITOR_CONTAINER_NAME}" || true
           docker stop "${BOT_CONTAINER_NAME}" || true
           docker rm "${BOT_CONTAINER_NAME}" || true
 
@@ -207,14 +215,27 @@ jobs:
             "${IMAGE_REPOSITORY_WORKER}:${IMAGE_TAG}" \
             python workers/router_event_worker.py
 
+      - name: Run monitor container
+        run: |
+          docker run -d \
+            --name "${MONITOR_CONTAINER_NAME}" \
+            --restart unless-stopped \
+            --env-file "${ENV_FILE}" \
+            -v "${LOG_DIR}":/app/logs \
+            --network "${NETWORK_NAME}" \
+            "${IMAGE_REPOSITORY_MONITOR}:${IMAGE_TAG}" \
+            python workers/router_monitor/worker.py
+
       - name: Check container status
         run: |
           sleep 5
           docker ps -a | grep "${BOT_CONTAINER_NAME}"
           docker ps -a | grep "${WORKER_CONTAINER_NAME}"
+          docker ps -a | grep "${MONITOR_CONTAINER_NAME}"
           echo "--- Container Logs ---"
           docker logs "${BOT_CONTAINER_NAME}" --tail 50 || true
           docker logs "${WORKER_CONTAINER_NAME}" --tail 50 || true
+          docker logs "${MONITOR_CONTAINER_NAME}" --tail 50 || true
 
       - name: Clean up old images
         run: |
