--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -24,3 +24,6 @@ data:
   MONGODB_TASK_COLLECTION: "tasks"
   RABBITMQ_QUEUE: "router_events"
   RABBITMQ_TASK_QUEUE: "router_tasks"
+  ROUTER_MONITOR_INTERVAL: "60"
+  ROUTER_MONITOR_TIMEOUT: "5"
+  ROUTER_MONITOR_CONCURRENCY: "5"
